--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Solar Theme
-url: http://example.org
-description: A stylish blog using the Solarized color palette
+name: Myth52125
+url: 
+description: 我在nodejs中踩过的坑
 
 permalink: /:year/:month/:day/:title/
 paginate: 10
