--- a/package.json
+++ b/package.json
@@ -1,30 +1,19 @@
 {
-  "name": "hexo-theme-bubuzou",
-  "version": "1.0.0",
-  "description": "A hexo theme remoulded by hexo-theme-apollo",
-  "main": "index.js",
-  "scripts": {
-    "sass": "gulp sass"
+  "name": "hexo-site",
+  "version": "0.0.0",
+  "private": true,
+  "hexo": {
+    "version": ""
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bulandent/hexo-theme-bubuzou"
-  },
-  "keywords": [
-    "hexo",
-    "theme",
-    "apollo"
-  ],
-  "author": "brandon Sun",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/pinggod/hexo-theme-apollo/issues"
-  },
-  "homepage": "https://github.com/pinggod/hexo-theme-apollo#readme",
-  "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.2",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.6.0"
+  "dependencies": {
+    "hexo": "^3.2.0",
+    "hexo-generator-archive": "^0.1.4",
+    "hexo-generator-category": "^0.1.3",
+    "hexo-generator-index": "^0.2.0",
+    "hexo-generator-tag": "^0.2.0",
+    "hexo-renderer-ejs": "^0.3.0",
+    "hexo-renderer-stylus": "^0.3.1",
+    "hexo-renderer-marked": "^0.3.0",
+    "hexo-server": "^0.2.0"
   }
 }
